// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeatmapPlot Does not display hidden cell sets 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "13",
  "14",
  "15",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "32",
  "33",
  "34",
  "35",
  "36",
  "37",
  "38",
  "39",
  "40",
  "41",
  "42",
  "43",
  "44",
  "45",
  "46",
  "47",
  "48",
  "49",
  "50",
  "51",
  "52",
  "53",
  "54",
  "55",
  "56",
  "57",
  "58",
  "59",
  "60",
  "66",
  "67",
  "68",
  "69",
  "70",
  "71",
  "72",
  "73",
  "74",
  "75",
  "76",
  "77",
  "78",
  "79",
  "80",
  "81",
  "82",
  "83",
  "84",
  "85",
  "86",
  "87",
  "88",
  "89",
  "90",
  "91",
  "92",
  "93",
  "94",
  "95",
  "96",
  "97",
  "98",
  "99",
  "100",
]
`;

exports[`HeatmapPlot Does not display hidden cell sets 2`] = `
Array [
  "S100a4",
  "Tmem176a",
  "Actn2",
  "Ckb",
  "Maf",
  "S100a6",
  "Cd163l1",
  "Tagln2",
  "S100a11",
  "S100a10",
  "Rps15a",
  "Actn1",
  "Slamf6",
  "Ms4a6b",
  "Sell",
  "Il7r",
  "Rgcc",
  "Ramp3",
  "Ccr6",
  "Hk2",
  "5830411N06Rik",
  "Lmo4",
  "Pxdc1",
  "Sptssa",
  "Rps5",
  "Ly6c2",
  "Ccl5",
  "Sh2d1a",
  "Rpl38",
  "Sidt1",
  "Nkg7",
  "Xcl1",
  "Klrd1",
  "Klre1",
  "Klrc1",
  "Cd244",
  "Ccl4",
  "Gpx8",
  "Gzma",
  "Klrg1",
  "Cdc45",
  "Uhrf1",
  "Ube2c",
  "Ccne1",
  "Chaf1a",
  "Bcl11a",
  "Vpreb3",
  "Napsa",
  "Cd79a",
  "Fcer2a",
  "Pparg",
  "Spi1",
  "Cd36",
  "Apoe",
  "Ebi3",
  "Clec10a",
  "Cfp",
  "Cd33",
  "Mmp8",
  "Mgst1",
  "Cav2",
  "Mid2",
  "Acvrl1",
  "Epn2",
  "Ramp2",
  "Gmpr",
  "Kcnn3",
  "Car4",
  "Rin2",
  "Axl",
]
`;

exports[`HeatmapPlot Does not display hidden cell sets 3`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "13",
  "14",
  "15",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "32",
  "33",
  "34",
  "35",
  "36",
  "37",
  "38",
  "39",
  "40",
  "41",
  "42",
  "43",
  "44",
  "45",
  "46",
  "47",
  "48",
  "49",
  "50",
  "51",
  "52",
  "53",
  "54",
  "55",
  "56",
  "57",
  "58",
  "59",
  "60",
  "61",
  "62",
  "63",
  "64",
  "65",
  "66",
  "67",
  "68",
  "69",
  "70",
  "71",
  "72",
  "73",
  "74",
  "75",
  "76",
  "77",
  "78",
  "79",
  "80",
  "81",
  "82",
  "83",
  "84",
  "85",
  "86",
  "87",
  "88",
  "89",
  "90",
  "91",
  "92",
  "93",
  "94",
  "95",
  "96",
  "97",
  "98",
  "99",
  "100",
]
`;

exports[`HeatmapPlot Does not display hidden cell sets 4`] = `
Array [
  "S100a4",
  "Tmem176a",
  "Actn2",
  "Ckb",
  "Maf",
  "S100a6",
  "Cd163l1",
  "Tagln2",
  "S100a11",
  "S100a10",
  "Rps15a",
  "Actn1",
  "Slamf6",
  "Ms4a6b",
  "Sell",
  "Il7r",
  "Rgcc",
  "Ramp3",
  "Ccr6",
  "Hk2",
  "5830411N06Rik",
  "Lmo4",
  "Pxdc1",
  "Sptssa",
  "Rps5",
  "Ly6c2",
  "Ccl5",
  "Sh2d1a",
  "Rpl38",
  "Sidt1",
  "Nkg7",
  "Xcl1",
  "Klrd1",
  "Klre1",
  "Klrc1",
  "Cd244",
  "Ccl4",
  "Gpx8",
  "Gzma",
  "Klrg1",
  "Cdc45",
  "Uhrf1",
  "Ube2c",
  "Ccne1",
  "Chaf1a",
  "Bcl11a",
  "Vpreb3",
  "Napsa",
  "Cd79a",
  "Fcer2a",
  "Pparg",
  "Spi1",
  "Cd36",
  "Apoe",
  "Ebi3",
  "Clec10a",
  "Cfp",
  "Cd33",
  "Mmp8",
  "Mgst1",
  "Cav2",
  "Mid2",
  "Acvrl1",
  "Epn2",
  "Ramp2",
  "Gmpr",
  "Kcnn3",
  "Car4",
  "Rin2",
  "Axl",
]
`;

exports[`HeatmapPlot Reacts to cellClass groupby being changed 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "13",
  "14",
  "15",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "32",
  "33",
  "34",
  "35",
  "36",
  "37",
  "38",
  "39",
  "40",
  "41",
  "42",
  "43",
  "44",
  "45",
  "46",
  "47",
  "48",
  "49",
  "50",
  "51",
  "52",
  "53",
  "54",
  "55",
  "56",
  "57",
  "58",
  "59",
  "60",
  "61",
  "62",
  "63",
  "64",
  "65",
  "66",
  "67",
  "68",
  "69",
  "70",
  "71",
  "72",
  "73",
  "74",
  "75",
  "76",
  "77",
  "78",
  "79",
  "80",
  "81",
  "82",
  "83",
  "84",
  "85",
  "86",
  "87",
  "88",
  "89",
  "90",
  "91",
  "92",
  "93",
  "94",
  "95",
  "96",
  "97",
  "98",
  "99",
  "100",
]
`;

exports[`HeatmapPlot Reacts to cellClass groupby being changed 2`] = `
Array [
  "S100a4",
  "Tmem176a",
  "Actn2",
  "Ckb",
  "Maf",
  "S100a6",
  "Cd163l1",
  "Tagln2",
  "S100a11",
  "S100a10",
  "Rps15a",
  "Actn1",
  "Slamf6",
  "Ms4a6b",
  "Sell",
  "Il7r",
  "Rgcc",
  "Ramp3",
  "Ccr6",
  "Hk2",
  "5830411N06Rik",
  "Lmo4",
  "Pxdc1",
  "Sptssa",
  "Rps5",
  "Ly6c2",
  "Ccl5",
  "Sh2d1a",
  "Rpl38",
  "Sidt1",
  "Nkg7",
  "Xcl1",
  "Klrd1",
  "Klre1",
  "Klrc1",
  "Cd244",
  "Ccl4",
  "Gpx8",
  "Gzma",
  "Klrg1",
  "Cdc45",
  "Uhrf1",
  "Ube2c",
  "Ccne1",
  "Chaf1a",
  "Bcl11a",
  "Vpreb3",
  "Napsa",
  "Cd79a",
  "Fcer2a",
  "Pparg",
  "Spi1",
  "Cd36",
  "Apoe",
  "Ebi3",
  "Clec10a",
  "Cfp",
  "Cd33",
  "Mmp8",
  "Mgst1",
  "Cav2",
  "Mid2",
  "Acvrl1",
  "Epn2",
  "Ramp2",
  "Gmpr",
  "Kcnn3",
  "Car4",
  "Rin2",
  "Axl",
]
`;

exports[`HeatmapPlot Renders the heatmap component by default if everything loads 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "13",
  "14",
  "15",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "32",
  "33",
  "34",
  "35",
  "36",
  "37",
  "38",
  "39",
  "40",
  "41",
  "42",
  "43",
  "44",
  "45",
  "46",
  "47",
  "48",
  "49",
  "50",
  "51",
  "52",
  "53",
  "54",
  "55",
  "56",
  "57",
  "58",
  "59",
  "60",
  "61",
  "62",
  "63",
  "64",
  "65",
  "66",
  "67",
  "68",
  "69",
  "70",
  "71",
  "72",
  "73",
  "74",
  "75",
  "76",
  "77",
  "78",
  "79",
  "80",
  "81",
  "82",
  "83",
  "84",
  "85",
  "86",
  "87",
  "88",
  "89",
  "90",
  "91",
  "92",
  "93",
  "94",
  "95",
  "96",
  "97",
  "98",
  "99",
  "100",
]
`;

exports[`HeatmapPlot Renders the heatmap component by default if everything loads 2`] = `
Array [
  "S100a4",
  "Tmem176a",
  "Actn2",
  "Ckb",
  "Maf",
  "S100a6",
  "Cd163l1",
  "Tagln2",
  "S100a11",
  "S100a10",
  "Rps15a",
  "Actn1",
  "Slamf6",
  "Ms4a6b",
  "Sell",
  "Il7r",
  "Rgcc",
  "Ramp3",
  "Ccr6",
  "Hk2",
  "5830411N06Rik",
  "Lmo4",
  "Pxdc1",
  "Sptssa",
  "Rps5",
  "Ly6c2",
  "Ccl5",
  "Sh2d1a",
  "Rpl38",
  "Sidt1",
  "Nkg7",
  "Xcl1",
  "Klrd1",
  "Klre1",
  "Klrc1",
  "Cd244",
  "Ccl4",
  "Gpx8",
  "Gzma",
  "Klrg1",
  "Cdc45",
  "Uhrf1",
  "Ube2c",
  "Ccne1",
  "Chaf1a",
  "Bcl11a",
  "Vpreb3",
  "Napsa",
  "Cd79a",
  "Fcer2a",
  "Pparg",
  "Spi1",
  "Cd36",
  "Apoe",
  "Ebi3",
  "Clec10a",
  "Cfp",
  "Cd33",
  "Mmp8",
  "Mgst1",
  "Cav2",
  "Mid2",
  "Acvrl1",
  "Epn2",
  "Ramp2",
  "Gmpr",
  "Kcnn3",
  "Car4",
  "Rin2",
  "Axl",
]
`;

exports[`HeatmapPlot Responds correctly to vitessce Heatmap callbacks 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "13",
  "14",
  "15",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "32",
  "33",
  "34",
  "35",
  "36",
  "37",
  "38",
  "39",
  "40",
  "41",
  "42",
  "43",
  "44",
  "45",
  "46",
  "47",
  "48",
  "49",
  "50",
  "51",
  "52",
  "53",
  "54",
  "55",
  "56",
  "57",
  "58",
  "59",
  "60",
  "61",
  "62",
  "63",
  "64",
  "65",
  "66",
  "67",
  "68",
  "69",
  "70",
  "71",
  "72",
  "73",
  "74",
  "75",
  "76",
  "77",
  "78",
  "79",
  "80",
  "81",
  "82",
  "83",
  "84",
  "85",
  "86",
  "87",
  "88",
  "89",
  "90",
  "91",
  "92",
  "93",
  "94",
  "95",
  "96",
  "97",
  "98",
  "99",
  "100",
]
`;

exports[`HeatmapPlot Responds correctly to vitessce Heatmap callbacks 2`] = `
Array [
  "S100a4",
  "Tmem176a",
  "Actn2",
  "Ckb",
  "Maf",
  "S100a6",
  "Cd163l1",
  "Tagln2",
  "S100a11",
  "S100a10",
  "Rps15a",
  "Actn1",
  "Slamf6",
  "Ms4a6b",
  "Sell",
  "Il7r",
  "Rgcc",
  "Ramp3",
  "Ccr6",
  "Hk2",
  "5830411N06Rik",
  "Lmo4",
  "Pxdc1",
  "Sptssa",
  "Rps5",
  "Ly6c2",
  "Ccl5",
  "Sh2d1a",
  "Rpl38",
  "Sidt1",
  "Nkg7",
  "Xcl1",
  "Klrd1",
  "Klre1",
  "Klrc1",
  "Cd244",
  "Ccl4",
  "Gpx8",
  "Gzma",
  "Klrg1",
  "Cdc45",
  "Uhrf1",
  "Ube2c",
  "Ccne1",
  "Chaf1a",
  "Bcl11a",
  "Vpreb3",
  "Napsa",
  "Cd79a",
  "Fcer2a",
  "Pparg",
  "Spi1",
  "Cd36",
  "Apoe",
  "Ebi3",
  "Clec10a",
  "Cfp",
  "Cd33",
  "Mmp8",
  "Mgst1",
  "Cav2",
  "Mid2",
  "Acvrl1",
  "Epn2",
  "Ramp2",
  "Gmpr",
  "Kcnn3",
  "Car4",
  "Rin2",
  "Axl",
]
`;
